k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omniedu-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: omniedu-web
  template:
    metadata:
      labels:
        app: omniedu-web
    spec:
      containers:
        - name: omniedu-web
          image: ghcr.io/example/omniedu:latest
          ports:
            - containerPort: 3000
